--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Glicker</string>
+    <string name="Content">\"Content\"</string>
+    <string name="Fotoğraf">\"Foto\"</string>
 </resources>
